# vedunya-presentation-builder

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  QUICKSTART.md  README.md  SETUP.md  docker-compose.yml  nginx.conf
Vedunya_presentation/: slide3.html  slide4.html
backend/: .gitignore  API_EXAMPLES.md  CHECKLIST.md  README.md  main.py  pyproject.toml  requirements.txt
backend/exports/: .gitkeep
backend/models/: __init__.py  schemas.py
backend/routes/: __init__.py  exports.py  presentations.py
backend/services/: __init__.py  export_service.py  presentation_scanner.py
claudedocs/: AGENT_INSTRUCTIONS.md  PHASE_2_SUMMARY.md  PROJECT_CONTEXT.md  TASK_LIST.md  error-handling-review.md  phase4-completion-report.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  test-site-debug.js  test-site.js  test-viewer.js  vite.config.ts
frontend/public/: Vedunya_presentation
frontend/public/Vedunya_presentation/: slide1.html  slide2.html  slide5.html  slide6.html  slide7.html
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: EmptyState.tsx  ErrorMessage.tsx  ExportButton.tsx  Layout.tsx  LoadingSpinner.tsx  SlidePreview.tsx
frontend/src/pages/: PresentationsList.tsx
frontend/src/presentations/: business-strategy.tsx  product-launch.tsx  tech-conference.tsx  vedunya-preview.tsx  vedunya-product.tsx  welcome.tsx
frontend/src/styles/: empty.css  error.css  export.css  global.css  (+5 more)
tests/: test_export.py
tests/e2e/: export-flow.spec.ts  homepage.spec.ts  presentation-viewer.spec.ts  setup.md
(+3 files in other folders)
