[project]
name = "vedunya-presentation-builder"
version = "1.0.0"
description = "Web interface for viewing and exporting React-based presentations in 16:9 format"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "playwright==1.40.0",
    "pydantic==2.5.0",
    "python-multipart==0.0.6",
    "aiofiles==23.2.1",
]

[project.scripts]
start = "uvicorn main:app --reload --host 0.0.0.0 --port 8000"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
]
